--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -267,6 +267,9 @@
     <Compile Include="FileModifiers\XdtTransformer.cs" />
     <Compile Include="V3Interop\IV3InteropRepository.cs" />
     <Compile Include="V3Interop\IV3PackageMetadata.cs" />
+    <Reference Include="DotNetZip, Version=1.15.0.0, Culture=neutral, PublicKeyToken=6583c7c814667745, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\DotNetZip.1.15.0\lib\net40\DotNetZip.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Data.Edm, Version=5.6.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>True</SpecificVersion>
       <HintPath>..\..\..\..\packages\Microsoft.Data.Edm.5.6.1\lib\net40\Microsoft.Data.Edm.dll</HintPath>
