--- a/src/Core/packages.config
+++ b/src/Core/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DotNetZip" version="1.15.0" targetFramework="net45" />
   <package id="ILRepack" version="1.26.0" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.6.1" targetFramework="net451" />
   <package id="Microsoft.Data.OData" version="5.6.1" targetFramework="net451" />
